fix(literature): expanded cards on mobile using `flex-column`
I'm not even sure how this happened, but it was causing all
expanded style cards to appear off-center.

--- a/src/components/layout/ee-literature.css
+++ b/src/components/layout/ee-literature.css
@@ -12,7 +12,6 @@
 }
 .lit-expanded .lit__cards {
   margin-top: 2rem;
-  flex-direction: column;
   max-width: 1024px;
 }
 
